# geohalo

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
api/: index.html
benchmark/: index.html
benchmarks/: _data.py  _mem.py  run.py
concepts/bias-tree/: index.html
concepts/downscaling/: index.html
concepts/exact-coverage/: index.html
concepts/latitude-correction/: index.html
concepts/linear-operator/: index.html
concepts/masked/: index.html
concepts/reduce-operator/: index.html
concepts/stencil/: index.html
docs/: api.md  benchmark.md  downscaling.md  gen_figures.py  index.md  performance.md  quickstart.md
docs/concepts/: bias-tree.md  downscaling.md  exact-coverage.md  latitude-correction.md  linear-operator.md  masked.md  reduce-operator.md  stencil.md
docs/guides/: caching.md  resampling.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-06-06-floor-downscale.md
docs/superpowers/specs/: 2026-06-06-floor-mean-preserving-downscale-design.md
examples/: visualize.py
guides/caching/: index.html
guides/resampling/: index.html
performance/: index.html
quickstart/: index.html
search/: search_index.json
src/geohalo/: __init__.py  aggregate.py  api.py  bias.py  bias_tree.py  cache.py  downscale.py  geometry.py  grid.py  plot.py  reduce_operator.py  resampler.py  stencil.py  weights.py
tests/: _strategies.py  conftest.py  test_public_api.py
tests/aggregate/: conftest.py  test_batch_dims.py  test_constant_field.py  test_direct_matmul.py  test_lat_resort.py  test_nan_handling.py  test_polygon_index.py  test_shape_validation.py
tests/api/: test_aggregate_bias.py  test_metadata.py  test_reduce.py  test_reduce_operator.py  test_reduce_with_stencil_basic.py  test_reduce_with_stencil_dataset.py  test_reduce_with_stencil_nan.py  test_reduce_with_stencil_resample.py  test_reduce_with_stencil_weight.py  test_resample.py  test_resample_floor.py
tests/benchmarks/: test_ecmwf_select.py  test_gadm.py  test_hierarchy.py  test_mem.py  test_nan_mask.py  test_run_cache.py
tests/bias/: conftest.py  test_build_validation.py  test_composed_matrix.py  test_compute_internal_nodes.py  test_compute_nan.py  test_compute_validation.py  test_cycle_detection.py  test_digest.py  test_fast_path.py
tests/bias_tree/: test_compute.py  test_dataclass.py  test_multiindex.py
tests/cache/: test_key_derivation.py  test_local.py  test_redis.py  test_redis_import_error.py  test_serialization.py  test_skips_build.py
tests/downscale/: test_bilinear_matrix.py  test_mean_preservation.py  test_operator.py  test_plane_validation.py  test_refine_grid.py  test_resolve_factor.py  test_subdivide_centres.py
tests/geometry/: conftest.py  test_build_validation.py  test_cell_area.py  test_digest.py  test_digests.py  test_floor_blocks.py  test_helpers.py  test_repr.py  test_resample_blocks.py  test_sorting.py  test_target_coords.py
tests/grid/: test_cell_areas.py  test_digest.py  test_from_dataarray.py  test_midpoint_edges.py  test_normalization.py
tests/resampler/: test_compute.py  test_dataclass.py  test_factored.py
tests/stencil/: test_compute.py  test_dataclass.py  test_spherical.py
tests/weights/: test_downscale_routing.py  test_empty_coverage.py  test_hypothesis_row_sum.py  test_matrix_type.py  test_metadata.py  test_row_sum.py
