[project]
name = "geohalo"
version = "0.1.0"
description = "Exact-fractional-area zonal statistics over weather grids"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exactextract>=0.3.0",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "xarray>=2026.4.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cfgrib>=0.9.15.1",
    "hypothesis>=6.115.0",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "redis>=7.4.0",
    "ruff>=0.15.14",
    "testcontainers[redis]>=4.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=geohalo --cov-report=term-missing --cov-fail-under=85"
markers = ["redis: requires a running Redis instance via testcontainers"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:exactextract.*",
    "ignore::DeprecationWarning:testcontainers.*",
]

[tool.coverage.run]
source = ["src/geohalo"]
omit = ["src/geohalo/plot.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
