[project]
name = "geohalo"
version = "1.1.0"
description = "Exact-fractional-area zonal statistics over weather grids"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Henrique Campiotti", email = "henrique.campiotti.marques@gmail.com" },
]
keywords = [
    "zonal-statistics",
    "weather",
    "geospatial",
    "xarray",
    "polygon",
    "grid",
    "exactextract",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "exactextract>=0.3.0",
    "geopandas>=1.0",
    "pandas>=2.2",
    "scipy>=1.11",
    "shapely>=2.0",
    "xarray>=2023.8",
]

[project.optional-dependencies]
redis = ["redis>=7.4.0"]
matplotlib = ["matplotlib>=3.10.9"]

[project.urls]
Homepage = "https://github.com/campiohe/geohalo"
Repository = "https://github.com/campiohe/geohalo"
Issues = "https://github.com/campiohe/geohalo/issues"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=1.0",
]
dev = [
    "cfgrib>=0.9.15.1",
    "eccodeslib>=2.47.1",
    "hypothesis>=6.115.0",
    "matplotlib>=3.10.9",
    "psutil>=7.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "redis>=7.4.0",
    "ruff>=0.15.14",
    "testcontainers[redis]>=4.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=geohalo --cov-report=term-missing --cov-fail-under=85"
markers = ["redis: requires a running Redis instance via testcontainers"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:exactextract.*",
    "ignore::DeprecationWarning:testcontainers.*",
]

[tool.coverage.run]
source = ["src/geohalo"]
omit = ["src/geohalo/plot.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
